--- a/BLEGuitar/BLEGuitar/BLEGuitar.csproj
+++ b/BLEGuitar/BLEGuitar/BLEGuitar.csproj
@@ -38,7 +38,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="BLEGuitarClass.cs" />
+    <Compile Include="BLEGuitarDevice.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
