--- a/BLEGuitar/BLEGuitar.iOS/packages.config
+++ b/BLEGuitar/BLEGuitar.iOS/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Plugin.BLE" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="Sharpcaster.SocketsForPCL" version="2.0.4" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.3.168" targetFramework="xamarinios10" />
 </packages>
