--- a/BLEGuitar.Server/BLEGuitar.Server.csproj
+++ b/BLEGuitar.Server/BLEGuitar.Server.csproj
@@ -57,13 +57,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BLEGuitarFinder.cs" />
+    <Compile Include="BLEGuitar.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IBLEGuitarDevice.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
