Working version, not all buttons mapped

--- a/BLEGuitar.Server/App.config
+++ b/BLEGuitar.Server/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
+  <appSettings>
+    <add key="Fret1" value="DIK_1"/>
+    <add key="Fret2" value="DIK_2"/>
+    <add key="Fret3" value="DIK_3"/>
+    <add key="Fret4" value="DIK_4"/>
+    <add key="Fret5" value="DIK_5"/>
+    <add key="Fret6" value="DIK_6"/>
+    <add key="Pause" value="DIK_F"/>
+    <add key="LiveTV" value="DIK_L"/>
+    <add key="HeroPower" value="DIK_H"/>
+    <add key="Power" value="DIK_P"/>
+  </appSettings>
 </configuration>
