--- a/BLEGuitar.Server/BLEGuitar.Server.csproj
+++ b/BLEGuitar.Server/BLEGuitar.Server.csproj
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.WindowsRuntime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -55,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLEGuitar.cs" />
+    <Compile Include="DIKKeyCode.cs" />
     <Compile Include="DXHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
