--- a/BLEGuitar.Server/BLEGuitar.Server.csproj
+++ b/BLEGuitar.Server/BLEGuitar.Server.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLEGuitar.cs" />
+    <Compile Include="GuitarController.cs" />
     <Compile Include="DIKKeyCode.cs" />
     <Compile Include="DXHelper.cs" />
     <Compile Include="Form1.cs">
